tests/missing-ending-subscript-bracket.qw
// COMPILE: %qwip %src
// EXPECT-COMPILE-ERROR

arr: i32[2];

// CHECK-NEXT: error: Expected the closing ']' for an array subscript.

func: () -> void {
  arr[1
}
